 multiplier/               Locally Removed            13 

Directory modules/system/switch_to_led_system/calculation4x4/multiplier
 multiplier4x4.bsv         Locally Removed            13 
 multiplier4x4.awb         Locally Removed            13 

Directory modules/system/switch_to_led_system/calculation4x4
 echo/                     Locally Removed            13 

Directory modules/system/switch_to_led_system/calculation4x4/echo
 echo4x4.awb               Locally Removed            13 
 echo4x4.bsv               Locally Removed            13 

Moved large number of demos/examples and tests/debuggers to 
leap-examples and leap-debug respectively.

----------
kfleming    Date: Tue Nov  2 21:08:50 EDT 2010  CSN: CSN-leap-15
                  Wed Nov  3 01:08:50 UTC 2010


Directory modules/bluespec/common/soft_connections/soft-service
 connections.bsv           Locally Modified           14 


Ported some typeclass instances from old SoftConnections code.


----------
kfleming    Date: Fri Nov  5 14:51:37 EDT 2010  CSN: CSN-leap-16
                  Fri Nov  5 18:51:37 UTC 2010


Directory config/pm/hasim/submodels
 pipelines/                Locally Added               0 

Directory config/pm/hasim/submodels/pipelines
 build-pipeline-xilinx-synplify.apm Locally Added               0 
 build-pipeline-altera.apm Locally Added               0 
 build-pipeline-xilinx.apm Locally Added               0 
 build-pipeline-bluesim.apm Locally Added               0 

Directory modules/project/bluespec
 mcd.tcl                   Locally Added               0 
 bufg.tcl                  Locally Added               0 
 mcd-tcl.awb               Locally Added               0 
 MCDTcl.py                 Locally Added               0 


MCD stage now generates better clock crossing ucf statements.  We also
generate xcf statements which prevent spurious BUFG instantiation, which was preventing larger designs from mapping sucessfully (and maybe also affecting functional correctness).